k8s/keycloak/minikube/keycloak-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
