k8s/keycloak/minikube/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-discovery-ingress
spec:
  rules:
    - host: "keycloak.192.168.64.18.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: keycloak-discovery
                port:
                  number: 8080
